Добавляет автоматическую сборку проекта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page__body">
@@ -49,8 +49,8 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/webp/chicken-500-tablet.webp, img/catalog/webp/chicken-500-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/webp/chicken-500-mobile.webp, img/catalog/webp/chicken-500-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken-500-tablet.webp, img/catalog/chicken-500-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/chicken-500-mobile.webp, img/catalog/chicken-500-mobile@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/chicken-500-tablet.png 1x, img/catalog/chicken-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/chicken-500-mobile.png"
@@ -87,8 +87,8 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/webp/chicken-1000-tablet.webp, img/catalog/webp/chicken-1000-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/webp/chicken-1000-mobile.webp, img/catalog/webp/chicken-1000-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken-1000-tablet.webp, img/catalog/chicken-1000-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/chicken-1000-mobile.webp, img/catalog/chicken-1000-mobile@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/chicken-1000-tablet.png 1x, img/catalog/chicken-1000-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/chicken-1000-mobile.png"
@@ -125,6 +125,8 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish-500-tablet.webp, img/catalog/fish-500-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/fish-500-mobile.webp, img/catalog/fish-500-mobile@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/fish-500-tablet.png 1x, img/catalog/fish-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/fish-500-mobile.png"
@@ -161,6 +163,8 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish-1000-tablet.webp, img/catalog/fish-1000-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/fish-1000-mobile.webp, img/catalog/fish-1000-mobile@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/fish-1000-tablet.png 1x, img/catalog/fish-1000-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/fish-1000-mobile.png"
@@ -197,6 +201,8 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat-500-tablet.webp, img/catalog/buckwheat-500-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/buckwheat-500-mobile.webp, img/catalog/buckwheat-500-mobile@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/buckwheat-500-tablet.png 1x, img/catalog/buckwheat-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/buckwheat-500-mobile.png"
@@ -233,6 +239,8 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat-1000-tablet.webp, img/catalog/buckwheat-1000-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/buckwheat-1000-mobile.webp, img/catalog/buckwheat-1000-mobile@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/buckwheat-1000-tablet.png 1x, img/catalog/buckwheat-1000-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/buckwheat-1000-mobile.png"
@@ -269,6 +277,8 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/rice-500-tablet.webp, img/catalog/rice-500-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/rice-500-mobile.webp, img/catalog/rice-500-mobile@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/rice-500-tablet.png 1x, img/catalog/rice-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/rice-500-mobile.png"
