Добавляет корректную работу главного меню без использования JS

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,10 +22,10 @@
             alt="Логотип CAT ENERGI.">
         </picture>
       </a>
-      <button class="toggle-navigation toggle-navigation--burger toggle-navigation--nojs" type="button">
+      <button class="toggle-navigation toggle-navigation--burger toggle-navigation--no-js" type="button">
         <span>Открыть меню</span>
       </button>
-      <nav class="main-navigation main-navigation--closed main-navigation--nojs">
+      <nav class="main-navigation main-navigation--closed main-navigation--no-js">
         <ul class="main-navigation__list">
           <li class="main-navigation__item">
             <a class="main-navigation__link" href="index.html">Главная</a>
