--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
       <a class="main-header__logo-link main-header__logo-link--off-state">
         <picture>
           <source media="(min-width: 768px)" srcset="img/header/logo-desktop.svg">
-          <img src="img/header/logo-mobile.svg" width="191" height="38" src="img/logo-icon.svg"
+          <img src="img/header/logo-mobile.svg" width="192" height="38" src="img/logo-icon.svg"
             alt="Логотип CAT ENERGI.">
         </picture>
       </a>
@@ -102,7 +102,7 @@
           </li>
           <li class="instruction__item instruction__item--icon-eat">
             <p class="instruction__text">
-              Замените один-два приема обычной еды на наше фунцкциональное питание.
+              Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
           <li class="instruction__item instruction__item--icon-clock">
@@ -172,7 +172,7 @@
     </section>
     <section class="invite-cooperation invite-cooperation--index">
       <div class="invite-cooperation__wrapper">
-        <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
+        <h2 class="invite-cooperation__title">Приглашаем <br>к сотрудничеству дилеров!</h2>
         <p class="invite-cooperation__address">
           ул. Большая Конюшенная, д. 19/8
           <span>Санкт-Петербург</span>
