Добавляет Pixel Perfect соответствие index.html (планшетная версия)

--- a/source/form.html
+++ b/source/form.html
@@ -17,13 +17,13 @@
     <div class="main-header__wrapper container">
       <a class="main-header__logo-link" href="index.html">
         <picture>
-          <source media="(min-width: 768px)" srcset="img/header/logo-desktop.svg">
-          <img src="img/header/logo-mobile.svg" width="192" height="38" src="img/logo-icon.svg"
-            alt="Логотип CAT ENERGI.">
+          <source media="(min-width: 1440px)" srcset="img/logo/logotype.svg" width="202" height="59">
+          <source media="(min-width: 768px)" srcset="img/logo/logotype.svg" width="174" height="52">
+          <img src="img/logo/logotype-mobile.svg" width="192" height="38" alt="Логотип CAT ENERGI.">
         </picture>
       </a>
       <button class="toggle-navigation toggle-navigation--burger toggle-navigation--no-js" type="button">
-        <span>Открыть меню</span>
+        <span>Открыть гланое меню</span>
       </button>
       <nav class="main-navigation main-navigation--closed main-navigation--no-js">
         <ul class="main-navigation__list">
@@ -31,7 +31,7 @@
             <a class="main-navigation__link" href="index.html">Главная</a>
           </li>
           <li class="main-navigation__item">
-            <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-navigation__link main-navigation__link--middle" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-navigation__item">
             <a class="main-navigation__link main-navigation__link--activ">Подбор программы</a>
@@ -168,7 +168,7 @@
   <footer class="page-footer ">
     <div class="page-footer__wrapper container">
       <a class="page-footer__logo-link" href="index.html">
-        <img class="page-footer__logo-icon" src="img/footer/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
+        <img class="page-footer__logo-icon" src="img/logo/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
       </a>
       <nav class="page-footer__socials socials">
         <h2 class="visually-hidden">Социальные сети</h2>
