--- a/source/index.html
+++ b/source/index.html
@@ -19,13 +19,13 @@
     <div class="main-header__wrapper container">
       <a class="main-header__logo-link main-header__logo-link--off-state">
         <picture>
-          <source media="(min-width: 768px)" srcset="img/header/logo-desktop.svg">
-          <img src="img/header/logo-mobile.svg" width="192" height="38" src="img/logo-icon.svg"
-            alt="Логотип CAT ENERGI.">
+          <source media="(min-width: 1440px)" srcset="img/logo/logotype.svg" width="202" height="59">
+          <source media="(min-width: 768px)" srcset="img/logo/logotype.svg" width="174" height="52">
+          <img src="img/logo/logotype-mobile.svg" width="192" height="38" alt="Логотип CAT ENERGI.">
         </picture>
       </a>
       <button class="toggle-navigation toggle-navigation--burger toggle-navigation--no-js" type="button">
-        <span>Открыть меню</span>
+        <span>Открыть главное меню</span>
       </button>
       <nav class="main-navigation main-navigation--closed main-navigation--no-js">
         <ul class="main-navigation__list">
@@ -34,7 +34,7 @@
               class="main-navigation__link main-navigation__link--main main-navigation__link--activ main-navigation__link--index-activ">Главная</a>
           </li>
           <li class="main-navigation__item">
-            <a class="main-navigation__link main-navigation__link--main" href="catalog.html">Каталог продукции</a>
+            <a class="main-navigation__link main-navigation__link--middle main-navigation__link--main " href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-navigation__item">
             <a class="main-navigation__link main-navigation__link--main" href="form.html">Подбор программы</a>
@@ -107,7 +107,8 @@
           </li>
           <li class="instruction__item instruction__item--icon-clock">
             <p class="instruction__text">
-              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+              Уже через месяц наслаждайтесь изменениями к лучшему&ensp;
+              <br>вашего питомца!
             </p>
           </li>
         </ol>
@@ -127,11 +128,11 @@
           <div class="example__results-table results-table">
             <div class="results-table__weight">
               <span class="results-table__value">5 КГ</span>
-              <span class="results-table__description">снижение веса</span>
+              <span class="results-table__description results-table__description--first">снижение веса</span>
             </div>
             <div class="results-table__time">
               <span class="results-table__value">60 ДНЕЙ</span>
-              <span class="results-table__description">затрачено времени</span>
+              <span class="results-table__description results-table__description--second">затрачено времени</span>
             </div>
           </div>
           <p class="example__expenses">
@@ -188,7 +189,7 @@
   <footer class="page-footer ">
     <div class="page-footer__wrapper container">
       <a class="page-footer__logo-link">
-        <img class="page-footer__logo-icon page-footer__logo-icon--off-state" src="img/footer/logo.svg" width="128"
+        <img class="page-footer__logo-icon page-footer__logo-icon--off-state" src="img/logo/logo.svg" width="128"
           height="24" alt="Логотип CAT ENERGI.">
       </a>
       <nav class="page-footer__socials socials">
