Добавляет Pixel Perfect соответствие index.html во всех версиях сайта

--- a/source/index.html
+++ b/source/index.html
@@ -107,7 +107,7 @@
           </li>
           <li class="instruction__item instruction__item--icon-clock">
             <p class="instruction__text">
-              Уже через месяц наслаждайтесь изменениями к лучшему&ensp;
+              Уже через месяц наслаждайтесь изменениями к лучшему&thinsp;
               <br>вашего питомца!
             </p>
           </li>
