Добавляет Pixel Perfect соответствие form.html (mobile)

--- a/source/form.html
+++ b/source/form.html
@@ -17,9 +17,9 @@
     <div class="main-header__wrapper container">
       <a class="main-header__logo-link" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo/logotype.svg" width="202" height="59">
+          <source media="(min-width: 1440px)" srcset="img/logo/logotype.svg" width="202" height="60">
           <source media="(min-width: 768px)" srcset="img/logo/logotype.svg" width="174" height="52">
-          <img src="img/logo/logotype-mobile.svg" width="192" height="38" alt="Логотип CAT ENERGI.">
+          <img class="main-header__logo-icon" src="img/logo/logotype-mobile.svg" width="190" height="38" alt="Логотип CAT ENERGI.">
         </picture>
       </a>
       <button class="toggle-navigation toggle-navigation--burger toggle-navigation--no-js" type="button">
@@ -46,7 +46,7 @@
       <div class="selection__wrapper container">
         <h1 class="selection__title">Подбор программы</h1>
         <p class="selection__text">
-          Заполните анкету и мы подберём программу питания для вашего кота
+          Заполните анкету, и мы подберем программу питания для вашего кота
         </p>
         <form class="selection__form" action="https://echo.htmlacademy.ru" method="get">
           <h2 class="visually-hidden">Форма подбора программы</h2>
@@ -143,7 +143,7 @@
           <div class="selection__form-submit-wrapper">
             <button class="selection__form-submit button" type="submit">Отправить заявку</button>
             <p class="selection__form-required">
-              * — Обязательные поля
+              *  &ndash;&nbsp; Обязательные поля
             </p>
           </div>
         </form>
@@ -151,7 +151,7 @@
     </section>
     <section class="invite-cooperation">
       <div class="invite-cooperation__wrapper">
-        <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
+        <h2 class="invite-cooperation__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
         <p class="invite-cooperation__address">
           ул. Большая Конюшенная, д. 19/8
           <span>Санкт-Петербург</span>
