--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,9 +17,9 @@
     <div class="main-header__wrapper container">
       <a class="main-header__logo-link" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo/logotype.svg" width="202" height="59">
+          <source media="(min-width: 1440px)" srcset="img/logo/logotype.svg" width="202" height="60">
           <source media="(min-width: 768px)" srcset="img/logo/logotype.svg" width="174" height="52">
-          <img src="img/logo/logotype-mobile.svg" width="192" height="38" alt="Логотип CAT ENERGI.">
+          <img class="main-header__logo-icon" src="img/logo/logotype-mobile.svg" width="190" height="38" alt="Логотип CAT ENERGI.">
         </picture>
       </a>
       <button class="toggle-navigation toggle-navigation--burger toggle-navigation--no-js" type="button">
