Добавляет Pixel Perfect соответствие form.html (tablet)

--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@
               class="main-navigation__link main-navigation__link--main main-navigation__link--activ main-navigation__link--index-activ">Главная</a>
           </li>
           <li class="main-navigation__item">
-            <a class="main-navigation__link main-navigation__link--middle main-navigation__link--main " href="catalog.html">Каталог продукции</a>
+            <a class="main-navigation__link main-navigation__link--main " href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-navigation__item">
             <a class="main-navigation__link main-navigation__link--main" href="form.html">Подбор программы</a>
