--- a/source/catalog.html
+++ b/source/catalog.html
@@ -31,7 +31,7 @@
             <a class="main-navigation__link" href="index.html">Главная</a>
           </li>
           <li class="main-navigation__item">
-            <a class="main-navigation__link main-navigation__link--middle main-navigation__link--activ">Каталог продукции</a>
+            <a class="main-navigation__link main-navigation__link--activ">Каталог продукции</a>
           </li>
           <li class="main-navigation__item">
             <a class="main-navigation__link" href="form.html">Подбор программы</a>
