--- a/source/form.html
+++ b/source/form.html
@@ -31,7 +31,7 @@
             <a class="main-navigation__link" href="index.html">Главная</a>
           </li>
           <li class="main-navigation__item">
-            <a class="main-navigation__link main-navigation__link--middle" href="catalog.html">Каталог продукции</a>
+            <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-navigation__item">
             <a class="main-navigation__link main-navigation__link--activ">Подбор программы</a>
