--- a/source/catalog.html
+++ b/source/catalog.html
@@ -301,7 +301,7 @@
                   </tr>
                   <tr class="card-item__row">
                     <td class="card-item__feature">Цена</td>
-                    <td class="card-item__value">400 ₽</td>
+                    <td class="card-item__value">500 ₽</td>
                   </tr>
                 </tbody>
               </table>
@@ -312,7 +312,7 @@
           </div>
         </li>
         <li class="catalog__more-items more-items">
-          <p class="more-items__title">Показать ещё 100500 товаров</p>
+          <p class="more-items__title">Показать еще 100500 товаров</p>
           <p class="more-items__text">На самом деле вкусов гораздо больше!</p>
           <a class="more-items__button button button--light" href="#">Показать все</a>
         </li>
@@ -385,14 +385,14 @@
             <svg class="promotion__icon" xmlns="http://www.w3.org/2000/svg" width="78" height="80">
               <use href="img/sprite.svg#promotion-icon"></use>
             </svg>
-            <p class="promotion__text">Закажите все и получите чехол для кота в подарок!</p>
+            <p class="promotion__text">Закажите все<br> и получите чехол для<br> кота в подарок!</p>
           </div>
         </div>
       </div>
     </section>
     <section class="invite-cooperation">
       <div class="invite-cooperation__wrapper">
-        <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
+        <h2 class="invite-cooperation__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
         <p class="invite-cooperation__address">
           ул. Большая Конюшенная, д. 19/8
           <span>Санкт-Петербург</span>
