Добавляет Pixel Perfect соответствие catalog.html (tablet)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -63,15 +63,15 @@
               </a>
               <table class="card-item__table">
                 <tbody>
-                  <tr class="card-item__row">
-                    <td class="card-item__feature">Масса</td>
+                  <tr class="card-item__row card-item__row--first">
+                    <td class="card-item__feature ">Масса</td>
                     <td class="card-item__value">500 г</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--middle">
                     <td class="card-item__feature">Вкус</td>
                     <td class="card-item__value">Курица</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--bottom">
                     <td class="card-item__feature">Цена</td>
                     <td class="card-item__value">700 ₽</td>
                   </tr>
@@ -101,15 +101,15 @@
               </a>
               <table class="card-item__table">
                 <tbody>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--first">
                     <td class="card-item__feature">Масса</td>
                     <td class="card-item__value">1000 г</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--middle">
                     <td class="card-item__feature">Вкус</td>
                     <td class="card-item__value">Курица</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--bottom">
                     <td class="card-item__feature">Цена</td>
                     <td class="card-item__value">1000 ₽</td>
                   </tr>
@@ -139,15 +139,15 @@
               </a>
               <table class="card-item__table">
                 <tbody>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--first">
                     <td class="card-item__feature">Масса</td>
                     <td class="card-item__value">500 г</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--middle">
                     <td class="card-item__feature">Вкус</td>
                     <td class="card-item__value">Рыба</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--bottom">
                     <td class="card-item__feature">Цена</td>
                     <td class="card-item__value">700 ₽</td>
                   </tr>
@@ -177,15 +177,15 @@
               </a>
               <table class="card-item__table">
                 <tbody>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--first">
                     <td class="card-item__feature">Масса</td>
                     <td class="card-item__value">1000 г</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--middle">
                     <td class="card-item__feature">Вкус</td>
                     <td class="card-item__value">Рыба</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--bottom">
                     <td class="card-item__feature">Цена</td>
                     <td class="card-item__value">1000 ₽</td>
                   </tr>
@@ -215,15 +215,15 @@
               </a>
               <table class="card-item__table">
                 <tbody>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--first">
                     <td class="card-item__feature">Масса</td>
                     <td class="card-item__value">500 г</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--middle">
                     <td class="card-item__feature">Вкус</td>
                     <td class="card-item__value">Гречка</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--bottom">
                     <td class="card-item__feature">Цена</td>
                     <td class="card-item__value">400 ₽</td>
                   </tr>
@@ -253,15 +253,15 @@
               </a>
               <table class="card-item__table">
                 <tbody>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--first">
                     <td class="card-item__feature">Масса</td>
                     <td class="card-item__value">1000 г</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--middle">
                     <td class="card-item__feature">Вкус</td>
                     <td class="card-item__value">Гречка</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--bottom">
                     <td class="card-item__feature">Цена</td>
                     <td class="card-item__value">700 ₽</td>
                   </tr>
@@ -291,15 +291,15 @@
               </a>
               <table class="card-item__table">
                 <tbody>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--first">
                     <td class="card-item__feature">Масса</td>
                     <td class="card-item__value">500 г</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--middle">
                     <td class="card-item__feature">Вкус</td>
                     <td class="card-item__value">Рис</td>
                   </tr>
-                  <tr class="card-item__row">
+                  <tr class="card-item__row card-item__row--bottom">
                     <td class="card-item__feature">Цена</td>
                     <td class="card-item__value">500 ₽</td>
                   </tr>
