Добавляет Pixel Perfect соответствие catalog.html (desktop)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -49,8 +49,11 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/chicken-500-desktop.webp, img/catalog/chicken-500-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken-500-tablet.webp, img/catalog/chicken-500-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/catalog/chicken-500-mobile.webp, img/catalog/chicken-500-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)"
+                srcset="img/catalog/chicken-500-desktop.png 1x, img/catalog/chicken-500-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/chicken-500-tablet.png 1x, img/catalog/chicken-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/chicken-500-mobile.png"
@@ -87,13 +90,16 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/chicken-1000-desktop.webp, img/catalog/chicken-1000-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken-1000-tablet.webp, img/catalog/chicken-1000-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/catalog/chicken-1000-mobile.webp, img/catalog/chicken-1000-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)"
+                srcset="img/catalog/chicken-1000-desktop.png 1x, img/catalog/chicken-1000-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/chicken-1000-tablet.png 1x, img/catalog/chicken-1000-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/chicken-1000-mobile.png"
                   srcset="img/catalog/chicken-1000-mobile@2x.png 2x" width="140" height="112"
-                  alt="Cat Energy Pro «Курица» 100 г">
+                  alt="Cat Energy Pro «Курица» 1000 г">
               </picture>
             </a>
             <div class="card-item__description">
@@ -125,8 +131,11 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/fish-500-desktop.webp, img/catalog/fish-500-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish-500-tablet.webp, img/catalog/fish-500-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/catalog/fish-500-mobile.webp, img/catalog/fish-500-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)"
+                srcset="img/catalog/fish-500-desktop.png 1x, img/catalog/fish-500-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/fish-500-tablet.png 1x, img/catalog/fish-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/fish-500-mobile.png"
@@ -163,8 +172,11 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/fish-1000-desktop.webp, img/catalog/fish-1000-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish-1000-tablet.webp, img/catalog/fish-1000-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/catalog/fish-1000-mobile.webp, img/catalog/fish-1000-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)"
+                srcset="img/catalog/fish-1000-desktop.png 1x, img/catalog/fish-1000-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/fish-1000-tablet.png 1x, img/catalog/fish-1000-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/fish-1000-mobile.png"
@@ -201,8 +213,11 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/buckwheat-500-desktop.webp, img/catalog/buckwheat-500-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat-500-tablet.webp, img/catalog/buckwheat-500-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/catalog/buckwheat-500-mobile.webp, img/catalog/buckwheat-500-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)"
+                srcset="img/catalog/buckwheat-500-desktop.png 1x, img/catalog/buckwheat-500-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/buckwheat-500-tablet.png 1x, img/catalog/buckwheat-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/buckwheat-500-mobile.png"
@@ -239,8 +254,11 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/buckwheat-1000-desktop.webp, img/catalog/buckwheat-1000-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat-1000-tablet.webp, img/catalog/buckwheat-1000-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/catalog/buckwheat-1000-mobile.webp, img/catalog/buckwheat-1000-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)"
+                srcset="img/catalog/buckwheat-1000-desktop.png 1x, img/catalog/buckwheat-1000-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/buckwheat-1000-tablet.png 1x, img/catalog/buckwheat-1000-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/buckwheat-1000-mobile.png"
@@ -277,8 +295,11 @@
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/rice-500-desktop.webp, img/catalog/rice-500-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/rice-500-tablet.webp, img/catalog/rice-500-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/catalog/rice-500-mobile.webp, img/catalog/rice-500-mobile@2x.webp 2x">
+                <source media="(min-width: 1440px)"
+                srcset="img/catalog/rice-500-desktop.png 1x, img/catalog/rice-500-desktop@2x.png 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/rice-500-tablet.png 1x, img/catalog/rice-500-tablet@2x.png 2x">
                 <img class="card-item__image" src="img/catalog/rice-500-mobile.png"
