--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,6 @@
   <link rel="preload" href="/fonts/Lato-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="/fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="/fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script src="js/draggable-jquery-ui-min.js"></script>
 </head>
 
 <body class="page__body">
@@ -130,11 +128,11 @@
           </div>
           <div class="example__results-table results-table">
             <div class="results-table__weight">
-              <span class="results-table__value">5 КГ</span>
+              <span class="results-table__value">5 кг</span>
               <span class="results-table__description results-table__description--first">снижение веса</span>
             </div>
             <div class="results-table__time">
-              <span class="results-table__value">60 ДНЕЙ</span>
+              <span class="results-table__value">60 дней</span>
               <span class="results-table__description results-table__description--second">затрачено времени</span>
             </div>
           </div>
@@ -235,6 +233,8 @@
     </div>
   </footer>
   <script src="js/script-burger.js" defer></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js" defer></script>
+  <script src="js/draggable-jquery-ui-min.js" defer></script>
   <script src="js/script-slider.js" defer></script>
 </body>
 
