--- a/source/index.html
+++ b/source/index.html
@@ -232,10 +232,10 @@
       </div>
     </div>
   </footer>
-  <script src="js/script-burger.js" defer></script>
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js" defer></script>
-  <script src="js/draggable-jquery-ui-min.js" defer></script>
-  <script src="js/script-slider.js" defer></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="js/draggable-jquery-ui-min.js"></script>
+  <script src="js/script-burger.js"></script>
+  <script src="js/script-slider.js"></script>
 </body>
 
 </html>
